# project-chimera

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REPORT.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: coding-standards.mdc  git-commits.mdc  project-chimera.mdc
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
scripts/: ci.sh  spec-check.sh
skills/: README.md  __init__.py
skills/skill_download_youtube/: README.md  __init__.py
skills/skill_fetch_trends/: README.md  __init__.py
skills/skill_generate_content/: README.md  __init__.py
skills/skill_transcribe_audio/: README.md  __init__.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
