[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network — Agentic Infrastructure"
readme = "REPORT.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pip-audit>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
